# ai-style-generator

./: .env  app.py  pyproject.toml  requirements.txt  test.py
templates/: index.html
